refactor code
I refactor some code about new java version and some unnecessary
objects that I leant from effective java item6.

--Make progress every day!